//go:generate protoc --gogofaster_out=. series.proto

package schemas;

message MetricTag {
	repeated string tag = 1;
}

message MetricName {
    required string metric = 1;
    optional uint64 id = 2;
    optional string uid = 3;
    repeated MetricTag tags = 13;
    repeated MetricTag meta_tags = 14;
}

message MetricValue {
    required int64 time = 1;
    optional double min = 2;
    optional double max = 3;
    optional double last = 4;
    required double sum = 5;
    required int64 count = 6;
}

message SeriesMetric {
	required uint64 id = 2;
	required string uid = 3;
	required int64 time = 4;
	required string metric = 5;
	required string encoding = 6;
	required bytes data = 7;
	optional uint32 resolution = 8;
	optional uint32 ttl = 9;
	repeated MetricTag tags = 13;
	repeated MetricTag meta_tags = 14;
}

message SingleMetric {
	required uint64 id = 2;
	required string uid = 3;
	required int64 time = 4;
	required string metric = 5;
	optional double min = 6;
	optional double max = 7;
	optional double last = 8;
	required double sum =9;
	required int64 count =10;
	optional uint32 resolution = 11;
	optional uint32 ttl = 12;
	repeated MetricTag tags = 13;
	repeated MetricTag meta_tags = 14;
}

message UnProcessedMetric {
	required int64 time = 1;
	required string metric = 2;
	optional double min = 3;
	optional double max = 4;
	optional double last = 5;
	required double sum = 6;
	required int64 count = 7;
	repeated MetricTag tags = 13;
	repeated MetricTag meta_tags = 14;
}


message RawMetric {
	required int64 time = 1;
	required string metric = 2;
	required double value = 3;
	repeated MetricTag tags = 13;
	repeated MetricTag meta_tags = 14;
}

